--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-fastapi
-uvicorn[standard]
-python-telegram-bot>=21.0
-aiohttp
-pytz
+python-telegram-bot>=22.5
+fastapi==0.128.0
+uvicorn==0.40.0
+aiohttp==3.13.2
+python-dotenv==1.2.1
+pytz==2025.2
