--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-python-telegram-bot>=22.5
-fastapi==0.128.0
-uvicorn==0.40.0
-aiohttp==3.13.2
-python-dotenv==1.2.1
-pytz==2025.2
+python-telegram-bot>=22.0
+fastapi
+uvicorn
+aiohttp
+pytz
+python-dotenv
